Agregue un gradiente y bordes redondeados

--- a/tareacv.html
+++ b/tareacv.html
@@ -8,7 +8,10 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
+    <div class="fondo">
     <h1>Francisco Brignani</h1>
+</div>
+<div class="fondo2">
     <div class="foto">
     <img src="https://img.freepik.com/vector-premium/icono-perfil-avatar_188544-4755.jpg?w=740" alt="Foto de perfil">
     </div> 
@@ -37,6 +40,7 @@
     </ol>
     </nav>
 
+</div>
 
     <h3>Lugares donde me gustaria trabajar y lugares en los que no: </h3>
     <div class="texto borde">
@@ -45,5 +49,6 @@
     <p><b>Barcelona:</b> Seria ideal poder trabajar en barcelona porque me parece un lugar muy lindo y hablo el idioma..., Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt libero at nostrum, totam reiciendis excepturi voluptatem odio soluta distinctio omnis iusto, ex sint quod vitae saepe quas quidem quisquam suscipit.</p>
     </div>
     <h4>Si queres saber mas informacion apreta <a href="https://www.google.com.ar" target="_blank">AQUI</a></h4>
+
 </body>
 </html>
